# mtgjson-sdk

./: LICENSE  README.md  pyproject.toml  smoke_test.py
.github/workflows/: publish.yml
src/mtg_json_tools/: __init__.py  _sql.py  async_client.py  cache.py  client.py  config.py  connection.py
src/mtg_json_tools/booster/: __init__.py  simulator.py
src/mtg_json_tools/models/: __init__.py  cards.py  decks.py  sealed.py  sets.py  submodels.py
src/mtg_json_tools/queries/: __init__.py  cards.py  decks.py  enums.py  identifiers.py  legalities.py  prices.py  sealed.py  sets.py  skus.py  tokens.py
tests/: conftest.py  test_booster.py  test_cache.py  test_cards.py  test_client.py  test_connection_parquet.py  test_prices.py  test_sets.py  test_sql_builder.py  test_tokens.py
