[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtg-json-tools"
version = "0.1.0"
description = "Query client for MTGJSON card data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Robert Pratt" }]
keywords = ["mtg", "magic-the-gathering", "cards", "sdk", "duckdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.1.0,<2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Repository = "https://github.com/the-muppet2/mtg-json-tools"

[project.optional-dependencies]
polars = ["polars>=1.0"]
all = ["polars>=1.0", "orjson>=3.9"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyarrow>=14.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mtg_json_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["mtg_json_tools"]
